Added Hero Section

--- a/frontend/src/components/Hero.astro
+++ b/frontend/src/components/Hero.astro
@@ -1,16 +1,115 @@
-<div class="absolute h-screen w-full flex items-center justify-center z-3">
+<div class="w-full h-screen mt-[30px] justify-center items-center">
   <div
-    class="flex flex-col justify-center items-center max-w-[810px] -mt-60 gap-4"
+    class="absolute px-[64px] top-[280px] w-full flex justify-between items-center"
   >
-    <h4 class="text-[#fafafa] text-sm font-bold tracking-widest">
-      BASED IN INDIA
-    </h4>
-    <h1 class="text-[#fafafa] text-7xl font-bold tracking-wide">
-      Quality <span class="text-[#3b82f6]">Design & Web Development</span> Synergy
-    </h1>
-    <p class="">
-      Hi, I'm Andrija, I create intuitive, visually stunning and highly
-      functional web applications.
+    <div class="flex flex-col gap-16">
+      <svg
+        class="ml-[60px]"
+        width="85"
+        height="43"
+        viewBox="0 0 85 43"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M1.5 4.00006L28.5 1.50006L49 41.5001L84 14.5001"
+          stroke="#0C0F03"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"></path>
+      </svg>
+
+      <svg
+        width="44"
+        height="53"
+        viewBox="0 0 44 53"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M19 1.50006L1 33.0001L36.5 52.0001L43 18.5001L19 1.50006Z"
+          fill="#FEE145"
+          stroke="#0C0F03"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"></path>
+      </svg>
+    </div>
+    <div class="flex flex-col gap-16">
+      <svg
+        width="43"
+        height="61"
+        viewBox="0 0 43 61"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M16.5 1.5L1 42L27.5 59.5L41.5 33.5L16.5 1.5Z"
+          fill="#01CC65"
+          stroke="#0C0F03"
+          stroke-width="2"
+          stroke-linejoin="round"></path>
+      </svg>
+      <svg
+        class="-ml-[60px]"
+        width="96"
+        height="67"
+        viewBox="0 0 96 67"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path d="M48.5 66L38.6537 40.078L95 17L48.5 66Z" fill="#3463E5"></path>
+        <path
+          d="M24 1.5L48.5 66L95 17L1 55.5"
+          stroke="#0C0F03"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"></path>
+      </svg>
+    </div>
+  </div>
+  <div class="flex justify-between items-center px-[134px]">
+    <div class="flex gap-2">
+      <a href="/" class="font-bold text-lg/4.5 text-[#0C0F03]">
+        <span>nikhil</span>
+        <span>.</span>
+        <span
+          class="bg-[#C8F031] px-[12px] py-[6px] border rounded-full border-[#0C0F03] shadow-sm"
+          >Creative</span
+        >
+      </a>
+    </div>
+
+    <ul class="flex items-center font-medium text-[#545849] gap-12">
+      <li class="cursor-pointer">About Me</li>
+      <li class="cursor-pointer">Portfolio</li>
+      <li class="cursor-pointer">Contact</li>
+    </ul>
+  </div>
+
+  <div class="flex flex-col justify-center items-center mt-[94px] gap-2">
+    <div class="flex gap-[20px] justify-center items-center">
+      <p class="w-[36px] h-[2px] bg-[#0C0F03]"></p>
+      <p class="text-[30px] font-medium">Hello, I'm Nikhil 👋</p>
+    </div>
+    <p
+      class="flex justify-center items-center font-bold w-[970px] text-center text-[90px]/23"
+    >
+      Digital Designer Creative Developer
     </p>
+    <p class="text-[#545849] font-base text-center w-[600px] text-lg mt-4">
+      A digital designer and creative developer from Delhi - India passionate
+      about creating memorable experiences.
+    </p>
+    <div class="flex gap-4 mt-8 text-[#0C0F03] font-semibold">
+      <button
+        class="bg-[#C8F031] rounded-full border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03]"
+        >Get In Touch</button
+      >
+      <button
+        class="rounded-full border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03]"
+        >View Portfolio</button
+      >
+    </div>
   </div>
 </div>
