--- a/frontend/src/components/Hero.astro
+++ b/frontend/src/components/Hero.astro
@@ -1,4 +1,9 @@
-<div class="w-full h-screen mt-[30px] justify-center items-center">
+---
+const pathname = new URL(Astro.request.url).pathname;
+const currentPath = pathname.slice(1); //
+---
+
+<div class="w-full h-screen mt-[30px]">
   <div
     class="absolute px-[64px] top-[280px] w-full flex justify-between items-center"
   >
@@ -68,7 +73,9 @@
       </svg>
     </div>
   </div>
-  <div class="flex justify-between items-center px-[134px]">
+  <div
+    class="flex justify-between items-center px-[20px] sm:px-[67px] md:[134px]"
+  >
     <div class="flex gap-2">
       <a href="/" class="font-bold text-lg/4.5 text-[#0C0F03]">
         <span>nikhil</span>
@@ -80,17 +87,80 @@
       </a>
     </div>
 
-    <ul class="flex items-center font-medium text-[#545849] gap-12">
+    <ul class="hidden sm:flex items-center font-medium text-[#545849] gap-12">
       <li class="cursor-pointer">About Me</li>
       <li class="cursor-pointer">Portfolio</li>
       <li class="cursor-pointer">Contact</li>
     </ul>
+    <button class="sm:hidden cursor-pointer" id="menu_icon" aria-label="Menu">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="32"
+        height="32"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+        class="w-8 h-8"
+      >
+        <line x1="3" y1="12" x2="21" y2="12"></line>
+        <line x1="3" y1="6" x2="21" y2="6"></line>
+        <line x1="3" y1="18" x2="21" y2="18"></line>
+      </svg>
+    </button>
+    <div
+      class="sidebar_menu absolute top-0 right-0 bottom-0 overflow-hidden bg-white w-0 transition-all duration-400 cursor-pointer"
+    >
+      <div class="flex flex-col text-[#545849] border-[#545849]">
+        <button
+          class="flex items-center gap-2 p-3 cursor-pointer"
+          id="back_icon"
+          aria-label="Close menu"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="1.5"
+            class="w-6 h-6"
+          >
+            <path d="M18 6L6 18M6 6l12 12"></path>
+          </svg>
+          <span class="pt-1">Back</span>
+        </button>
+        <p class="py-2 pl-6 border-t">
+          <a href="/" class={currentPath === "" ? "active" : ""}>ABOUT ME</a>
+        </p>
+        <p class="py-2 pl-6 border-t">
+          <a href="/about" class={currentPath === "about" ? "active" : ""}
+            >PORTFOLIO</a
+          >
+        </p>
+        <p class="py-2 pl-6 border-t last:border-b-1">
+          <a
+            href="/employers"
+            class={currentPath === "employers" ? "active" : ""}>CONTACT</a
+          >
+        </p>
+      </div>
+    </div>
   </div>
 
-  <div class="flex flex-col justify-center items-center mt-[94px] gap-2">
-    <div class="flex gap-[20px] justify-center items-center">
-      <p class="w-[36px] h-[2px] bg-[#0C0F03]"></p>
-      <p class="text-[30px] font-medium">Hello, I'm Nikhil 👋</p>
+  <div
+    class="flex flex-col justify-center items-center mt-[60px] sm:mt-[120px]  gap-2 px-[20px]"
+  >
+    <div
+      class="flex flex-col-reverse sm:flex-row gap-[20px] text-center justify-center items-center"
+    >
+      <p class="hidden sm:block w-[36px] h-[2px] bg-[#0C0F03]"></p>
+      <p class="text-3xl font-medium">Hello, I'm Nikhil</p>
+      <span
+        class="cursor-pointer text-6xl sm:text-4xl animate-wave inline-block transition-transform duration-300 origin-bottom hover:scale-250 hover:rotate-30"
+        >👋</span
+      >
     </div>
     <p
       class="flex justify-center items-center font-bold w-[970px] text-center text-[90px]/23"
@@ -112,4 +182,21 @@
       >
     </div>
   </div>
+  <div class="bg-[#0C0F03] w-full h-[104px] mt-[90px]">
+    <p></p>
+  </div>
 </div>
+
+<script>
+  const menuIcon = document.querySelector("#menu_icon");
+  const backIcon = document.querySelector("#back_icon");
+  const menu = document.querySelector(".sidebar_menu");
+
+  menuIcon?.addEventListener("click", () => {
+    menu?.classList.toggle("active");
+  });
+
+  backIcon?.addEventListener("click", () => {
+    menu?.classList.toggle("active");
+  });
+</script>
