--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -14,3 +14,22 @@
 html, body{
     overflow-x: hidden;
 }
+
+
+.sidebar_menu.active{
+    width: 100%;
+}
+
+@keyframes wave {
+    0% { transform: rotate(0deg) scale(1); }
+    20% { transform: rotate(15deg) scale(1.1); }
+    40% { transform: rotate(-10deg) scale(1.1); }
+    60% { transform: rotate(5deg) scale(1.1); }
+    80% { transform: rotate(-5deg) scale(1); }
+    100% { transform: rotate(0deg) scale(1); }
+  }
+  
+  .animate-wave {
+    animation: wave 2s ease-in-out infinite;
+    transform-origin: bottom center;
+  }
