--- a/frontend/src/components/Hero.astro
+++ b/frontend/src/components/Hero.astro
@@ -3,9 +3,9 @@ const pathname = new URL(Astro.request.url).pathname;
 const currentPath = pathname.slice(1); //
 ---
 
-<div class="w-full h-screen mt-[30px]">
+<div class="w-full flex flex-col justify-between h-screen pt-[30px]">
   <div
-    class="absolute px-[64px] top-[280px] w-full flex justify-between items-center"
+    class="hidden absolute top-[280px] w-full flex justify-between items-center -z-1 px-[20px] sm:px-[67px] md:px-[250px]"
   >
     <div class="flex flex-col gap-16">
       <svg
@@ -74,23 +74,35 @@ const currentPath = pathname.slice(1); //
     </div>
   </div>
   <div
-    class="flex justify-between items-center px-[20px] sm:px-[67px] md:[134px]"
+    class="flex justify-between items-center px-[20px] sm:px-[70px] md:px-[100px]"
   >
     <div class="flex gap-2">
       <a href="/" class="font-bold text-lg/4.5 text-[#0C0F03]">
         <span>nikhil</span>
         <span>.</span>
         <span
-          class="bg-[#C8F031] px-[12px] py-[6px] border rounded-full border-[#0C0F03] shadow-sm"
+          class="bg-[#C8F031] px-[12px] py-[6px] border rounded-full border-[#0C0F03]"
           >Creative</span
         >
       </a>
     </div>
 
     <ul class="hidden sm:flex items-center font-medium text-[#545849] gap-12">
-      <li class="cursor-pointer">About Me</li>
-      <li class="cursor-pointer">Portfolio</li>
-      <li class="cursor-pointer">Contact</li>
+      <li
+        class="cursor-pointer hover:text-black transition-all ease-in delay-50"
+      >
+        About Me
+      </li>
+      <li
+        class="cursor-pointer hover:text-black transition-all ease-in delay-50"
+      >
+        Portfolio
+      </li>
+      <li
+        class="cursor-pointer hover:text-black transition-all ease-in delay-50"
+      >
+        Contact
+      </li>
     </ul>
     <button class="sm:hidden cursor-pointer" id="menu_icon" aria-label="Menu">
       <svg
@@ -109,7 +121,7 @@ const currentPath = pathname.slice(1); //
       </svg>
     </button>
     <div
-      class="sidebar_menu absolute top-0 right-0 bottom-0 overflow-hidden bg-white w-0 transition-all duration-400 cursor-pointer"
+      class="sidebar_menu absolute z-10 top-0 right-0 bottom-0 overflow-hidden bg-white w-0 transition-all duration-400 cursor-pointer"
     >
       <div class="flex flex-col text-[#545849] border-[#545849]">
         <button
@@ -149,40 +161,44 @@ const currentPath = pathname.slice(1); //
     </div>
   </div>
 
-  <div
-    class="flex flex-col justify-center items-center mt-[60px] sm:mt-[120px]  gap-2 px-[20px]"
-  >
+  <div class="flex flex-col justify-center items-center gap-4 px-[20px]">
     <div
       class="flex flex-col-reverse sm:flex-row gap-[20px] text-center justify-center items-center"
     >
       <p class="hidden sm:block w-[36px] h-[2px] bg-[#0C0F03]"></p>
-      <p class="text-3xl font-medium">Hello, I'm Nikhil</p>
+      <p class="text-2xl sm:text-3xl md:text-4xl font-medium">
+        Hello, I'm Nikhil
+      </p>
       <span
-        class="cursor-pointer text-6xl sm:text-4xl animate-wave inline-block transition-transform duration-300 origin-bottom hover:scale-250 hover:rotate-30"
+        class="cursor-pointer text-8xl sm:text-4xl animate-wave transition-transform duration-300 origin-bottom hover:scale-250 hover:rotate-30"
         >👋</span
       >
     </div>
     <p
-      class="flex justify-center items-center font-bold w-[970px] text-center text-[90px]/23"
+      class="flex justify-center items-center font-bold w-full sm:w-full max-w-[970px] text-center text-5xl sm:text-5xl md:text-[90px]/23"
     >
       Digital Designer Creative Developer
     </p>
-    <p class="text-[#545849] font-base text-center w-[600px] text-lg mt-4">
+    <p
+      class="text-[#545849] font-base text-center w-full sm:w-[600px] text-base sm:text-lg mt-4"
+    >
       A digital designer and creative developer from Delhi - India passionate
       about creating memorable experiences.
     </p>
-    <div class="flex gap-4 mt-8 text-[#0C0F03] font-semibold">
+    <div
+      class="flex flex-col sm:flex-row gap-4 mt-8 text-[#0C0F03] text-sm sm:text-base font-semibold"
+    >
       <button
-        class="bg-[#C8F031] rounded-full border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03]"
+        class="bg-[#C8F031] rounded-full border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1 transition-all duration-300"
         >Get In Touch</button
       >
       <button
-        class="rounded-full border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03]"
+        class="rounded-full border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1 transition-all duration-300"
         >View Portfolio</button
       >
     </div>
   </div>
-  <div class="bg-[#0C0F03] w-full h-[104px] mt-[90px]">
+  <div class="bg-[#0C0F03] w-full h-[104px]">
     <p></p>
   </div>
 </div>
