--- a/frontend/src/components/Hero.astro
+++ b/frontend/src/components/Hero.astro
@@ -5,7 +5,7 @@ const currentPath = pathname.slice(1); //
 
 <div class="w-full flex flex-col justify-between h-screen pt-[30px]">
   <div
-    class="hidden absolute top-[280px] w-full flex justify-between items-center -z-1 px-[20px] sm:px-[67px] md:px-[250px]"
+    class="absolute top-[280px] w-full hidden justify-between items-center -z-1 px-[20px] sm:px-[67px] md:px-[250px] 2xl:flex"
   >
     <div class="flex flex-col gap-16">
       <svg
@@ -180,13 +180,13 @@ const currentPath = pathname.slice(1); //
       Digital Designer Creative Developer
     </p>
     <p
-      class="text-[#545849] font-base text-center w-full sm:w-[600px] text-base sm:text-lg mt-4"
+      class="text-[#545849] font-base text-center w-full sm:w-[600px] text-base sm:text-lg"
     >
       A digital designer and creative developer from Delhi - India passionate
       about creating memorable experiences.
     </p>
     <div
-      class="flex flex-col sm:flex-row gap-4 mt-8 text-[#0C0F03] text-sm sm:text-base font-semibold"
+      class="flex flex-col sm:flex-row gap-4 mt-4 text-[#0C0F03] text-sm sm:text-base font-semibold"
     >
       <button
         class="bg-[#C8F031] rounded-full border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1 transition-all duration-300"
