--- a/frontend/src/components/Hero.astro
+++ b/frontend/src/components/Hero.astro
@@ -1,6 +1,6 @@
 ---
 const pathname = new URL(Astro.request.url).pathname;
-const currentPath = pathname.slice(1); //
+const currentPath = pathname.slice(1);
 ---
 
 <div class="w-full flex flex-col justify-between h-screen pt-[30px]">
@@ -117,61 +117,105 @@ const currentPath = pathname.slice(1); //
       >
     </div>
   </div>
-  <div class="bg-[#0C0F03] text-lg font-bold overflow-hidden">
-    <div
-      class="flex w-max items-center invert h-[104px] gap-[40px] animate-infinite-scroll"
-    >
-      <div class="flex-shrink-0 flex items-center gap-[40px]">
-        <img class="h-12 w-12" src="/svg/mongodb.svg" />
-        <p>MongoDB</p>
-        <img class="h-12 w-12" src="/svg/express.svg" />
-        <p>Express.JS</p>
-        <img class="h-12 w-12" src="/svg/react.svg" />
-        <p>React.JS</p>
-        <img class="h-12 w-12" src="/svg/nodedotjs.svg" />
-        <p>Node.Js</p>
-        <img class="h-12 w-12" src="/svg/html5.svg" />
-        <p>HTML5</p>
-        <img class="h-12 w-12" src="/svg/css.svg" />
-        <p>CSS</p>
-        <img class="h-12 w-12" src="/svg/javascript.svg" />
-        <p>JavaScript</p>
-        <img class="h-12 w-12" src="/svg/astro.svg" />
-        <p>Astro</p>
-        <img class="h-12 w-12" src="/svg/git.svg" />
-        <p>Git</p>
-        <img class="h-12 w-12" src="/svg/github.svg" />
-        <p>Github</p>
-        <img class="h-12 w-12" src="/svg/postman.svg" />
-        <p>Postman</p>
-      </div>
-      <div class="flex-shrink-0 flex items-center gap-[40px]">
-        <img class="h-12 w-12" src="/svg/mongodb.svg" />
-        <p>MongoDB</p>
-        <img class="h-12 w-12" src="/svg/express.svg" />
-        <p>Express.JS</p>
-        <img class="h-12 w-12" src="/svg/react.svg" />
-        <p>React.JS</p>
-        <img class="h-12 w-12" src="/svg/nodedotjs.svg" />
-        <p>Node.Js</p>
-        <img class="h-12 w-12" src="/svg/html5.svg" />
-        <p>HTML5</p>
-        <img class="h-12 w-12" src="/svg/css.svg" />
-        <p>CSS</p>
-        <img class="h-12 w-12" src="/svg/javascript.svg" />
-        <p>JavaScript</p>
-        <img class="h-12 w-12" src="/svg/astro.svg" />
-        <p>Astro</p>
-        <img class="h-12 w-12" src="/svg/git.svg" />
-        <p>Git</p>
-        <img class="h-12 w-12" src="/svg/github.svg" />
-        <p>Github</p>
-        <img class="h-12 w-12" src="/svg/postman.svg" />
-        <p>Postman</p>
-      </div>
+
+  <div
+    id="tech-carousel"
+    class="bg-[#0C0F03] text-3xl font-bold h-28 overflow-hidden w-full"
+  >
+    <div id="carousel-container" class="flex h-full items-center">
+      <!-- First set of tech icons -->
+      <ul
+        class="tech-list flex items-center [&_li]:flex [&_li]:items-center [&_li]:gap-4 [&_li]:mx-8 [&_img]:max-w-none invert"
+      >
+        <li>
+          <img class="h-12 w-12" src="/svg/mongodb.svg" />
+          <p>MongoDB</p>
+        </li>
+        <li>
+          <img class="h-12 w-12" src="/svg/express.svg" />
+          <p>Express.JS</p>
+        </li>
+        <li>
+          <img class="h-12 w-12" src="/svg/react.svg" />
+          <p>React.JS</p>
+        </li>
+        <li>
+          <img class="h-12 w-12" src="/svg/nodedotjs.svg" />
+          <p>Node.Js</p>
+        </li>
+        <li>
+          <img class="h-12 w-12" src="/svg/html5.svg" />
+          <p>HTML5</p>
+        </li>
+        <li>
+          <img class="h-12 w-12" src="/svg/css.svg" />
+          <p>CSS</p>
+        </li>
+        <li>
+          <img class="h-12 w-12" src="/svg/javascript.svg" />
+          <p>JavaScript</p>
+        </li>
+        <li>
+          <img class="h-12 w-12" src="/svg/astro.svg" />
+          <p>Astro</p>
+        </li>
+        <li>
+          <img class="h-12 w-12" src="/svg/git.svg" />
+          <p>Git</p>
+        </li>
+        <li>
+          <img class="h-12 w-12" src="/svg/github.svg" />
+          <p>Github</p>
+        </li>
+        <li>
+          <img class="h-12 w-12" src="/svg/postman.svg" />
+          <p>Postman</p>
+        </li>
+      </ul>
     </div>
   </div>
 </div>
+
+<script>
+  // This will run when the component is mounted
+  document.addEventListener("DOMContentLoaded", function () {
+    const container = document.getElementById("carousel-container");
+    const list = document.querySelector(".tech-list");
+
+    // Clone the list and append it to create the infinite effect
+    const clone = list.cloneNode(true);
+    container.appendChild(clone);
+
+    // Get the width of a single list
+    const listWidth = list.offsetWidth;
+
+    // Set animation properties dynamically through CSS variables
+    const carousel = document.getElementById("tech-carousel");
+    carousel.style.setProperty("--list-width", `${listWidth}px`);
+
+    // Desired speed - change this value to control speed (pixels per second)
+    const pixelsPerSecond = 100;
+
+    // Calculate duration based on width and desired speed
+    const duration = listWidth / pixelsPerSecond;
+    carousel.style.setProperty("--scroll-duration", `${duration}s`);
+
+    console.log(listWidth);
+    console.log(duration);
+
+    // Add the animation class after calculations
+    container.classList.add("animate-carousel");
+
+    // Handle resize events to recalculate if needed
+    window.addEventListener("resize", function () {
+      const updatedWidth = list.offsetWidth;
+      const updatedDuration = updatedWidth / pixelsPerSecond;
+
+      carousel.style.setProperty("--list-width", `${updatedWidth}px`);
+      carousel.style.setProperty("--scroll-duration", `${updatedDuration}s`);
+    });
+  });
+</script>
 
 <script>
   const menuIcon = document.querySelector("#menu_icon");
