--- a/frontend/src/components/Features.astro
+++ b/frontend/src/components/Features.astro
@@ -1,3 +1,23 @@
-<div>
-  <h1 class="text-center text-6xl mt-16">Hello</h1>
+<div
+  class="flex flex-col sm:flex-col w-full lg:w-fit lg:flex-row gap-10 mx-auto mt-[80px] lg:mt-[180px] mb-[500px]"
+>
+  <div class="max-w-[870px] flex px-5">
+    <p
+      class="font-bold text-[#0C0F03] text-4xl sm:text-5xl md:text-6xl lg:text-7xl"
+    >
+      At the Heart of Design is an Opportunity to Solve Problem
+    </p>
+  </div>
+  <div class="relative mx-auto flex justify-center lg:block">
+    <div
+      class="flex flex-col text-center justify-center items-center h-[140px] w-[140px] lg:w-[180px] lg:h-[180px] rounded-full bg-[#C8F031] text-3xl font-medium border-[#0C0F03] border"
+    >
+      02+ <span class="text-base font-normal">Experience</span>
+    </div>
+    <div
+      class="relative -left-[30px] lg:absolute lg:left-[110px] lg:top-[110px] flex flex-col text-center justify-center items-center h-[140px] w-[140px] lg:w-[180px] lg:h-[180px] rounded-full bg-[#01CC65] text-3xl font-medium border-[#0C0F03] border"
+    >
+      10+ <span class="text-base font-normal">Projects Done</span>
+    </div>
+  </div>
 </div>
