--- a/frontend/src/components/Features.astro
+++ b/frontend/src/components/Features.astro
@@ -1,14 +1,14 @@
 <div
-  class="flex flex-col w-full lg:w-fit xl:flex-row gap-10 xl:gap-1 mx-auto mt-[80px] lg:mt-[180px] mb-[500px] justify-center items-center"
+  class="flex flex-col w-full lg:w-fit xl:flex-row gap-10 xl:gap-1 mx-auto mt-[80px] lg:mt-[180px] mb-[500px]"
 >
-  <div class="max-w-[870px] flex px-5 text-center">
+  <div class="max-w-[870px] flex px-5 text-center md:text-left">
     <p
       class="font-bold text-[#0C0F03] text-4xl sm:text-5xl md:text-6xl lg:text-7xl"
     >
       At the Heart of Design is an Opportunity to Solve Problem
     </p>
   </div>
-  <div class="relative mx-auto flex justify-center xl:block border-black border">
+  <div class="relative mx-auto flex justify-center xl:block">
     <div
       class="flex flex-col text-center justify-center items-center h-[140px] w-[140px] lg:w-[180px] lg:h-[180px] rounded-full bg-[#C8F031] text-3xl font-medium border-[#0C0F03] border"
     >
