--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -2,9 +2,11 @@
 import Layout from "../layouts/Layout.astro";
 import Hero from "../components/Hero.astro";
 import Features from "../components/Features.astro";
+import Services from "../components/Services.astro";
 ---
 
 <Layout>
   <Hero />
   <Features />
+  <Services />
 </Layout>
