--- a/frontend/src/components/Hero.astro
+++ b/frontend/src/components/Hero.astro
@@ -80,7 +80,9 @@ const currentPath = pathname.slice(1);
     </div>
   </div>
 
-  <div class="flex flex-col justify-center items-center gap-4 px-[20px]">
+  <div
+    class="flex flex-col justify-center items-center gap-4 px-[20px] mt-8 sm:mt-0"
+  >
     <div
       class="flex flex-col-reverse sm:flex-row gap-[20px] text-center justify-center items-center"
     >
