--- a/frontend/src/components/Hero.astro
+++ b/frontend/src/components/Hero.astro
@@ -13,7 +13,7 @@ const currentPath = pathname.slice(1);
         <span>.</span>
         <span
           class="bg-[#C8F031] px-[12px] py-[6px] border rounded-full border-[#0C0F03]"
-          >Creative</span
+          >uhsrav</span
         >
       </a>
     </div>
