--- a/frontend/src/components/Hero.astro
+++ b/frontend/src/components/Hero.astro
@@ -107,7 +107,7 @@ const currentPath = pathname.slice(1);
       about creating memorable experiences.
     </p>
     <div
-      class="flex flex-col sm:flex-row gap-4 mt-4 text-[#0C0F03] text-sm sm:text-base font-semibold"
+      class="flex flex-col sm:flex-row gap-4 mt-4 text-[#0C0F03] text-sm sm:text-base font-bold"
     >
       <button
         class="bg-[#C8F031] rounded-full border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
