--- a/frontend/src/components/Services.astro
+++ b/frontend/src/components/Services.astro
@@ -1,5 +1,5 @@
 <div
-  class="mt-[100px] md:mt-[180px] max-w-[1170px] mx-auto p-2 flex flex-col gap-10 mb-[500px]"
+  class="mt-[100px] md:mt-[180px] max-w-[1170px] mx-auto p-2 flex flex-col gap-10"
 >
   <div class="max-w-[670px] mx-auto">
     <p class="text-4xl sm:text-5xl lg:text-7xl font-bold text-center">
@@ -224,7 +224,7 @@
   </div>
   <div class="mx-auto">
     <button
-      class="bg-[#C8F031] rounded-full border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+      class="bg-[#C8F031] rounded-full font-bold border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
       >Get In Touch</button
     >
   </div>
