--- a/frontend/src/layouts/Layout.astro
+++ b/frontend/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import Footer from "../components/Footer.astro";
 ---
 
 <!doctype html>
@@ -29,5 +30,6 @@ import "../styles/global.css";
   </head>
   <body>
     <slot />
+    <Footer />
   </body>
 </html>
