Footer Section Added

--- a/frontend/src/components/Footer.astro
+++ b/frontend/src/components/Footer.astro
@@ -1,11 +1,11 @@
-<div class="bg-[#C8F031] w-full px-4 xl:px-80 pt-10">
-  <div class="flex flex-col lg:flex-row gap-20 md:gap-40 py-10 w-full">
-    <div class="w-full md:w-1/2">
+<div class="bg-[#C8F031] w-full px-4 sm:px-20 md:px-40 lg:px-60 xl:px-80 pt-10">
+  <div class="flex flex-col lg:flex-row gap-10 lg:gap-40 py-10 w-full">
+    <div class="w-full lg:w-1/2">
       <p class="font-bold text-5xl lg:text-7xl">
         Got a Project? I am Available Let's Talk
       </p>
     </div>
-    <div class="w-full md:w-1/2 flex flex-col gap-10">
+    <div class="w-full lg:w-1/2 flex flex-col gap-10">
       <p class="text-xl">
         I am available to work on your awesome projects. A digital designer and
         creative developer from Delhi - India passionate about creating
