--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -3,10 +3,12 @@ import Layout from "../layouts/Layout.astro";
 import Hero from "../components/Hero.astro";
 import Features from "../components/Features.astro";
 import Services from "../components/Services.astro";
+import Projects from "../components/Projects.astro";
 ---
 
 <Layout>
   <Hero />
   <Features />
   <Services />
+  <Projects />
 </Layout>
