Images converted to webp

--- a/frontend/src/components/Projects.astro
+++ b/frontend/src/components/Projects.astro
@@ -17,7 +17,7 @@
       <div
         class="p-4 border border-[#0C0F03] rounded-xl flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
       >
-        <img class="w-150" src="/images/project1.png" alt="" />
+        <img class="w-150" src="/images/project1.webp" alt="" />
       </div>
       <div class="w-screen max-w-[470px] flex flex-col gap-5 px-6">
         <p class="text-3xl font-bold">Photographer Portfolio Landing Page</p>
@@ -58,7 +58,7 @@
       <div
         class="p-4 border border-[#0C0F03] rounded-xl flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
       >
-        <img class="w-150" src="/images/project2.png" alt="" />
+        <img class="w-150" src="/images/project2.webp" alt="" />
       </div>
       <div class="w-screen max-w-[470px] flex flex-col gap-5 px-6">
         <p class="text-3xl font-bold">
@@ -99,7 +99,7 @@
       <div
         class="p-4 border border-[#0C0F03] rounded-xl flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
       >
-        <img class="w-150" src="/images/project3.png" alt="" />
+        <img class="w-150" src="/images/project3.webp" alt="" />
       </div>
       <div class="w-screen max-w-[470px] flex flex-col gap-5 px-6">
         <p class="text-3xl font-bold">Creative Agency Landing Page - Connive</p>
