--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -4,11 +4,13 @@ import Hero from "../components/Hero.astro";
 import Features from "../components/Features.astro";
 import Services from "../components/Services.astro";
 import Projects from "../components/Projects.astro";
+import Testimonial from "../components/Testimonial.astro";
 ---
 
 <Layout>
   <Hero />
   <Features />
   <Services />
+  <Testimonial />
   <Projects />
 </Layout>
