Added Testimonial Section

--- a/frontend/src/components/Testimonial.astro
+++ b/frontend/src/components/Testimonial.astro
@@ -2,7 +2,7 @@
   class="relative bg-[#C8F031] w-full px-4 sm:px-20 md:px-40 lg:px-60 xl:px-80 pt-10 py-20 flex flex-col gap-10 items-center"
 >
   <p class="text-center font-bold text-5xl lg:text-7xl">What Clients Say</p>
-  <p class="text-xl text-center w-screen max-w-[670px]">
+  <p class="text-xl text-center w-full max-w-[670px]">
     A digital designer and creative developer from Delhi - India passionate
     about creating memorable experiences.
   </p>
