Added Testimonial Section

--- a/frontend/src/components/Testimonial.astro
+++ b/frontend/src/components/Testimonial.astro
@@ -27,7 +27,7 @@
           fill="#0C0F03"></path>
       </svg>
     </p>
-    <p class="font-medium text-2xl text-[#4E5358]">
+    <p class="font-medium text-xl sm:text-2xl text-[#4E5358]">
       "Nikhil Patel demonstrates an excellent understanding of user needs and
       all of his designs are creative and elegant in simplicity. He is very well
       thought out and has an excellent response to feedback.”
