Added Testimonial Section

--- a/frontend/src/layouts/Layout.astro
+++ b/frontend/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
 import Footer from "../components/Footer.astro";
+import Credit from "../components/Credit.astro";
 ---
 
 <!doctype html>
@@ -31,5 +32,6 @@ import Footer from "../components/Footer.astro";
   <body>
     <slot />
     <Footer />
+    <Credit />
   </body>
 </html>
