--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -5,9 +5,11 @@ import Features from "../components/Features.astro";
 import Services from "../components/Services.astro";
 import Projects from "../components/Projects.astro";
 import Testimonial from "../components/Testimonial.astro";
+import Credit from "../components/Credit.astro";
 ---
 
 <Layout>
+  <Credit />
   <Hero />
   <Features />
   <Services />
