Added Testimonial Section

--- a/frontend/src/layouts/Layout.astro
+++ b/frontend/src/layouts/Layout.astro
@@ -32,6 +32,6 @@ import Credit from "../components/Credit.astro";
   <body>
     <slot />
     <Footer />
-    <Credit />
+    <!-- <Credit /> -->
   </body>
 </html>
