--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -9,7 +9,7 @@ import Credit from "../components/Credit.astro";
 ---
 
 <Layout>
-  <Credit />
+  <!-- <Credit /> -->
   <Hero />
   <Features />
   <Services />
