Added FAQ Section

--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -6,6 +6,7 @@ import Services from "../components/Services.astro";
 import Projects from "../components/Projects.astro";
 import Testimonial from "../components/Testimonial.astro";
 import Credit from "../components/Credit.astro";
+import FAQ from "../components/FAQ.astro";
 ---
 
 <Layout>
@@ -13,6 +14,7 @@ import Credit from "../components/Credit.astro";
   <Hero />
   <Features />
   <Services />
-  <Testimonial />
   <Projects />
+  <Testimonial />
+  <FAQ />
 </Layout>
