Added FAQ Section

--- a/frontend/src/components/FAQ.astro
+++ b/frontend/src/components/FAQ.astro
@@ -14,7 +14,7 @@
   </div>
   <div class="w-full xl:w-1/2 flex flex-col gap-5">
     <div
-      class="flex items-center justify-between font-bold text-lg sm:text-xl px-10 py-8 border border-[#0C0F03] rounded-xl"
+      class="flex items-center justify-between gap-5 font-bold text-lg sm:text-xl px-10 py-8 border border-[#0C0F03] rounded-xl"
     >
       <p>What is your hourly rate?</p>
       <div>
@@ -80,7 +80,7 @@
     </div>
 
     <div
-      class="flex items-center justify-between font-bold text-lg sm:text-xl px-10 py-8 border border-[#0C0F03] rounded-xl"
+      class="flex items-center justify-between gap-5 font-bold text-lg sm:text-xl px-10 py-8 border border-[#0C0F03] rounded-xl"
     >
       <p>What's the time-zone do you work in?</p>
       <div>
@@ -113,7 +113,7 @@
     </div>
 
     <div
-      class="flex items-center justify-between font-bold text-lg sm:text-xl px-10 py-8 border border-[#0C0F03] rounded-xl"
+      class="flex items-center justify-between gap-5 font-bold text-lg sm:text-xl px-10 py-8 border border-[#0C0F03] rounded-xl"
     >
       <p>Do you give lifetime support?</p>
       <div>
