--- a/frontend/src/components/FAQ.astro
+++ b/frontend/src/components/FAQ.astro
@@ -49,7 +49,7 @@
     <div
       class="flex flex-col gap-5 font-bold text-lg sm:text-xl px-10 py-8 border bg-[#C8F031] border-[#0C0F03] rounded-xl shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
     >
-      <div class="flex items-center justify-center gap-5">
+      <div class="flex items-center justify-between gap-5">
         <p>What kind of services you are providing?</p>
         <div>
           <svg
