--- a/frontend/src/components/Features.astro
+++ b/frontend/src/components/Features.astro
@@ -1,5 +1,5 @@
 <div
-  class="flex flex-col w-full lg:w-fit xl:flex-row gap-10 xl:gap-1 mx-auto mt-[80px] lg:mt-[180px]"
+  class="w-full max-w-[1280px] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6 mx-auto my-20 flex flex-col xl:flex-row gap-10 items-center overflow-hidden"
 >
   <div class="max-w-[870px] flex px-5 text-center md:text-left">
     <p
