--- a/frontend/src/components/Footer.astro
+++ b/frontend/src/components/Footer.astro
@@ -1,52 +1,54 @@
-<div class="bg-[#C8F031] w-full px-4 sm:px-20 md:px-40 lg:px-60 xl:px-80 pt-10">
-  <div class="flex flex-col lg:flex-row gap-10 lg:gap-40 py-10 w-full">
-    <div class="w-full lg:w-1/2">
-      <p class="font-bold text-5xl lg:text-7xl">
-        Got a Project? I am Available Let's Talk
-      </p>
-    </div>
-    <div class="w-full lg:w-1/2 flex flex-col gap-10">
-      <p class="text-xl">
-        I am available to work on your awesome projects. A digital designer and
-        creative developer from Delhi - India passionate about creating
-        memorable experiences.
-      </p>
-      <button
-        class="w-fit rounded-full bg-white font-bold border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
-        >Get In Touch</button
-      >
-      <div class="flex flex-col gap-2">
-        <p class="font-bold">Follow Me</p>
-        <div class="flex gap-2">
-          <div
-            class="p-2 rounded-full bg-white border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1"
-          >
-            <img class="h-6 w-6" src="/svg/facebook.svg" />
-          </div>
+<div class="bg-[#C8F031] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6">
+  <div class="max-w-[1280px] mx-auto flex flex-col pt-10">
+    <div class="flex flex-col xl:flex-row justify-between gap-5 py-10 w-full">
+      <div class="w-full xl:w-3/8">
+        <p class="font-bold text-3xl md:text-4xl lg:text-5xl xl:text-6xl">
+          Got a Project? I am Available Let's Talk
+        </p>
+      </div>
+      <div class="w-full xl:w-4/8 flex flex-col gap-10">
+        <p class="text-sm md:text-md lg:text-lg xl:text-xl">
+          I am available to work on your awesome projects. A digital designer
+          and creative developer from Delhi - India passionate about creating
+          memorable experiences.
+        </p>
+        <button
+          class="w-fit rounded-full bg-white font-bold text-sm md:text-md lg:text-lg border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+          >Get In Touch</button
+        >
+        <div class="flex flex-col gap-2">
+          <p class="font-bold text-sm md:text-md lg:text-lg">Follow Me</p>
+          <div class="flex gap-2">
+            <div
+              class="p-2 rounded-full bg-white border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1"
+            >
+              <img class="h-6 w-6" src="/svg/facebook.svg" />
+            </div>
 
-          <div
-            class="p-2 rounded-full bg-white border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1"
-          >
-            <img class="h-6 w-6" src="/svg/github.svg" />
-          </div>
+            <div
+              class="p-2 rounded-full bg-white border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1"
+            >
+              <img class="h-6 w-6" src="/svg/github.svg" />
+            </div>
 
-          <div
-            class="p-2 rounded-full bg-white border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1"
-          >
-            <img class="h-6 w-6" src="/svg/instagram.svg" />
-          </div>
+            <div
+              class="p-2 rounded-full bg-white border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1"
+            >
+              <img class="h-6 w-6" src="/svg/instagram.svg" />
+            </div>
 
-          <div
-            class="p-2 rounded-full bg-white border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1"
-          >
-            <img class="h-6 w-6" src="/svg/x.svg" />
+            <div
+              class="p-2 rounded-full bg-white border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1"
+            >
+              <img class="h-6 w-6" src="/svg/x.svg" />
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <hr />
-  <div class="py-10 text-center text-sm md:text-lg font-semibold">
-    <p>Copyright 2025 Nikhil Patel all rights reserved</p>
+    <hr class="w-full" />
+    <div class="py-5 text-center text-sm md:text-lg font-semibold">
+      <p>Copyright 2025 Nikhil Patel all rights reserved</p>
+    </div>
   </div>
 </div>
