--- a/frontend/src/components/FAQ.astro
+++ b/frontend/src/components/FAQ.astro
@@ -3,11 +3,13 @@
 >
   <div class="w-full xl:w-1/2 flex flex-col gap-5 self-start">
     <p
-      class="font-bold text-4xl lg:text-6xl xl:text-7xl text-center xl:text-left"
+      class="font-bold text-3xl md:text-4xl lg:text-5xl xl:text-6xl text-center xl:text-left"
     >
       What Clients Normally Ask
     </p>
-    <p class="text-xl text-[#545849] w-full text-center xl:text-left">
+    <p
+      class="text-md md:text-lg xl:text-xl text-[#545849] w-full text-center xl:text-left"
+    >
       A digital designer and creative developer from Delhi - India passionate
       about creating memorable experiences.
     </p>
