--- a/frontend/src/components/Footer.astro
+++ b/frontend/src/components/Footer.astro
@@ -7,17 +7,17 @@
         </p>
       </div>
       <div class="w-full xl:w-4/8 flex flex-col gap-10">
-        <p class="text-sm md:text-md lg:text-lg xl:text-xl">
+        <p class="text-md md:text-lg xl:text-xl">
           I am available to work on your awesome projects. A digital designer
           and creative developer from Delhi - India passionate about creating
           memorable experiences.
         </p>
         <button
-          class="w-fit rounded-full bg-white font-bold text-sm md:text-md lg:text-lg border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+          class="w-fit rounded-full bg-white font-bold text-md md:text-lg border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
           >Get In Touch</button
         >
         <div class="flex flex-col gap-2">
-          <p class="font-bold text-sm md:text-md lg:text-lg">Follow Me</p>
+          <p class="font-bold text-md md:text-lg">Follow Me</p>
           <div class="flex gap-2">
             <div
               class="p-2 rounded-full bg-white border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1"
