--- a/frontend/src/components/FAQ.astro
+++ b/frontend/src/components/FAQ.astro
@@ -8,7 +8,7 @@
       What Clients Normally Ask
     </p>
     <p
-      class="text-md md:text-lg xl:text-xl text-[#545849] w-full text-center xl:text-left"
+      class="text-lg md:text-lg xl:text-xl text-[#545849] w-full text-center xl:text-left"
     >
       A digital designer and creative developer from Delhi - India passionate
       about creating memorable experiences.
