--- a/frontend/src/components/Footer.astro
+++ b/frontend/src/components/Footer.astro
@@ -47,7 +47,7 @@
       </div>
     </div>
     <hr class="w-full" />
-    <div class="py-5 text-center text-sm md:text-lg font-semibold">
+    <div class="py-5 text-center text-lg sm:text-xl font-semibold">
       <p>Copyright 2025 Nikhil Patel all rights reserved</p>
     </div>
   </div>
