--- a/frontend/src/components/FAQ.astro
+++ b/frontend/src/components/FAQ.astro
@@ -8,7 +8,7 @@
       What Clients Normally Ask
     </p>
     <p
-      class="text-lg md:text-lg xl:text-xl text-[#545849] w-full text-center xl:text-left"
+      class="text-lg sm:text-xl text-[#545849] w-full text-center xl:text-left"
     >
       A digital designer and creative developer from Delhi - India passionate
       about creating memorable experiences.
@@ -74,7 +74,7 @@
           </svg>
         </div>
       </div>
-      <p class="text-base font-normal">
+      <p class="text-base sm:text-lg font-normal">
         I start by learn and research based on client brief and resource to gain
         about the needs. I provide web design, UI design, UX design, mobile app
         and web app design services respectively.
